# tfle

./: .gitignore  CLAUDE.md  README.md  build_pdf.py  generate_report.py  parsed_training_data.json  pyproject.toml
checkpoints/: nova10m_wikitext_final.pt
docs/: NOVA_GPU_ACCELERATION_CC_OUTLINE.md  NOVA_MULTI_GPU_SCALING_CC_OUTLINE.md  TFLE_FULL_SYSTEM_BUILD.md
experiments/: full_system.py  phase1_mnist.py  phase1_taskloss.py  phase1_tuned.py  phase2_cifar10.py  phase2_transformer.py  phase3_benchmarks.py
nova/: __init__.py  optimize.py  pretrain_fast.py  run_coevo_parallel.py  test1_coevolution.py  test1_distillation.py  test2_grpo.py  test2_ste_stability.py  test3_data_pipeline.py  test4_tfle_grpo.py
nova/benchmarks/: __init__.py  preference_eval.py
server/: README.md  config.yaml  gpu0.py  gpu1.py  launch.py  mega_run.py  nova_full_directive.py  parallel_run.py  run_100k.py  setup.sh
tests/: test_analysis.py  test_annealing.py  test_baseline.py  test_benchmarks.py  test_config.py  test_conv_layers.py  test_conv_model.py  test_corruption.py  test_fitness.py  test_layers.py  test_model.py  test_monitor.py  test_training.py  test_transformer.py
tfle/: __init__.py  analysis.py  annealing.py  baseline.py  benchmarks.py  cdll.py  config.py  conv_layers.py  conv_model.py  corruption.py  fitness.py  gpu_engine.py  layers.py  local_heads.py  model.py  monitor.py  swt.py  training.py  transformer.py
tfle_proving/: EMBEDDING_COEVOLUTION.md  FINDINGS.md  README.md  REPORT.md  UPDATES_V2_SPEC.md  __init__.py
tfle_proving_v2/: README.md  __init__.py
(+85 files in other folders)
